--- a/todo-web-app/src/main/resources/application.properties
+++ b/todo-web-app/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=todo-web-app
 #server.port=8081
+
 logging.level.org.springframework=debug
+logging.level.com.sergio.springboot.todo_web_app=info
+
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
