--- a/todo-web-app/src/main/resources/application.properties
+++ b/todo-web-app/src/main/resources/application.properties
@@ -6,3 +6,5 @@ logging.level.com.sergio.springboot.todo_web_app=info
 
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
+
+spring.mvc.format.date=yyyy-MM-dd
