--- a/todo-web-app/src/main/resources/application.properties
+++ b/todo-web-app/src/main/resources/application.properties
@@ -1,10 +1,21 @@
 spring.application.name=todo-web-app
 #server.port=8081
 
-logging.level.org.springframework=debug
+logging.level.org.springframework=info
 logging.level.com.sergio.springboot.todo_web_app=info
 
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
 spring.mvc.format.date=yyyy-MM-dd
+
+#spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:mysql://localhost:3306/todos
+spring.datasource.username=todos-user
+spring.datasource.password=dummytodos
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.defer-datasource-initialization=true
+#spring.jpa.show-sql=true -> Para tener mas detalle de que hacen las consultas de JPA
